k3s_manifests/django-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  replicas: 3
  template:
    metadata:
      labels:
        app: django-app
    spec:
      imagePullSecrets:
        - name: k3s-django-app
      containers:
        - name: django-app
          image: <your-docker-image>:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: django-app
spec:
  selector:
    app: django-app
  ports:
  - port: 8000
    targetPort: 8000
