k3s_manifests/webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
  namespace: django-app
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 2
  template:
    metadata:
      labels:
        app: webserver
    spec:
      imagePullSecrets:
        - name: k3s-django-app
      containers:
        - name: webserver
          image: <your-docker-image>:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: django-app
spec:
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
