k3s_manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-django-app
  namespace: django-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: <your-domain>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: django-app-service
                port:
                  number: 8000
          - path: /static
            pathType: ImplementationSpecific
            backend:
              service:
                name: webserver-service
                port:
                  number: 80
  tls:
    - hosts:
        - <your-domain>
